--- a/css/main.css
+++ b/css/main.css
@@ -6,5 +6,16 @@ body * {
 }
 
 body {
+  padding: 2rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.zuikio-darzove {
+  font-size: 1.2rem;
+  background-color: green;
+}
+
+.zuikio-darzo-error {
+  font-size: 1.2rem;
+  background-color: red;
 }
