--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,22 @@ body * {
 }
 
 body {
-  padding: 2rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.main-header {
+  background-color: #eee;
+  padding: 1rem 2rem;
+}
+
+.main-header nav {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+main {
+  padding: 2rem;
 }
 
 .zuikio-darzove {
